--- a/Poker Layout/Base.lproj/Main.storyboard
+++ b/Poker Layout/Base.lproj/Main.storyboard
@@ -18,8 +18,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jqd-RM-Dxo">
-                                <rect key="frame" x="86" y="408" width="93" height="0.0"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home.png" translatesAutoresizingMaskIntoConstraints="NO" id="lvF-wh-lYC">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jqd-RM-Dxo">
+                                <rect key="frame" x="86" y="414" width="148" height="49"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.27068858699999998" green="0.41334840070000001" blue="0.50146732230000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="31"/>
                                 <state key="normal" title="Start">
@@ -29,32 +33,25 @@
                                     <segue destination="Y36-nJ-nAn" kind="show" id="h1T-be-Ndh"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LayoutTitle" translatesAutoresizingMaskIntoConstraints="NO" id="lvF-wh-lYC">
-                                <rect key="frame" x="4" y="69" width="258" height="191"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pof-wV-g41">
-                                <rect key="frame" x="107" y="486" width="51" height="0.0"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pof-wV-g41">
+                                <rect key="frame" x="107" y="494" width="106" height="40"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.27068858699999998" green="0.41334840070000001" blue="0.50146732230000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="24"/>
                                 <state key="normal" title="Help">
                                     <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="sIg-lS-301" kind="show" id="bbS-ys-dFv"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.55663951700468051" green="0.60365863438939715" blue="0.73596129441624369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="pof-wV-g41" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="107" id="3Fm-pb-Vs2"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lvF-wh-lYC" secondAttribute="bottom" constant="209" id="5Xg-pj-cmn"/>
-                            <constraint firstItem="Jqd-RM-Dxo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="86" id="C6t-aP-RzE"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pof-wV-g41" secondAttribute="bottom" constant="42" id="Caf-SY-Ml8"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lvF-wh-lYC" secondAttribute="trailing" constant="3" id="FL0-UZ-Gje"/>
-                            <constraint firstItem="lvF-wh-lYC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="49" id="HVP-0Y-Rmf"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Jqd-RM-Dxo" secondAttribute="bottom" constant="111" id="N4v-q4-jbk"/>
-                            <constraint firstItem="lvF-wh-lYC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="4" id="SJn-s9-XbP"/>
-                            <constraint firstItem="pof-wV-g41" firstAttribute="top" secondItem="Jqd-RM-Dxo" secondAttribute="bottom" constant="29" id="dPG-11-1Re"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jqd-RM-Dxo" secondAttribute="trailing" constant="86" id="glG-6c-YgJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pof-wV-g41" secondAttribute="trailing" constant="107" id="kto-a7-Ndf"/>
-                            <constraint firstItem="Jqd-RM-Dxo" firstAttribute="top" secondItem="lvF-wh-lYC" secondAttribute="bottom" constant="49" id="tqv-cT-lL3"/>
+                            <constraint firstItem="lvF-wh-lYC" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9aR-HZ-9NN"/>
+                            <constraint firstItem="lvF-wh-lYC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ndq-Af-TxY"/>
+                            <constraint firstItem="lvF-wh-lYC" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="XlU-Wa-snG"/>
+                            <constraint firstItem="lvF-wh-lYC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ue0-8B-cFh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -64,7 +61,45 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="260.625" y="135.21126760563379"/>
+            <point key="canvasLocation" x="260.15625" y="134.84626647144947"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Stj-XC-3Nx">
+            <objects>
+                <viewController id="sIg-lS-301" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1ly-2Y-WWe">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="help.png" translatesAutoresizingMaskIntoConstraints="NO" id="NrZ-Yg-pwK">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nwC-LF-nWW">
+                                <rect key="frame" x="0.0" y="529" width="320" height="30"/>
+                                <state key="normal" title="go back">
+                                    <color key="titleColor" red="0.12549019610000001" green="0.16862745100000001" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="hWB-qs-ewE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.64050426800072791" green="0.64684589441657669" blue="0.64684589441657669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NrZ-Yg-pwK" firstAttribute="bottom" secondItem="fUU-6F-o2Y" secondAttribute="bottom" id="APs-Ps-Ekz"/>
+                            <constraint firstItem="nwC-LF-nWW" firstAttribute="trailing" secondItem="fUU-6F-o2Y" secondAttribute="trailing" id="Ith-8X-g8T"/>
+                            <constraint firstItem="nwC-LF-nWW" firstAttribute="leading" secondItem="fUU-6F-o2Y" secondAttribute="leading" id="OGn-oO-3Mk"/>
+                            <constraint firstItem="NrZ-Yg-pwK" firstAttribute="leading" secondItem="fUU-6F-o2Y" secondAttribute="leading" id="UJ1-s1-tfc"/>
+                            <constraint firstItem="NrZ-Yg-pwK" firstAttribute="trailing" secondItem="fUU-6F-o2Y" secondAttribute="trailing" id="WbT-mY-JFN"/>
+                            <constraint firstItem="NrZ-Yg-pwK" firstAttribute="top" secondItem="fUU-6F-o2Y" secondAttribute="top" id="m5Z-uc-zAg"/>
+                            <constraint firstItem="fUU-6F-o2Y" firstAttribute="bottom" secondItem="nwC-LF-nWW" secondAttribute="bottom" constant="9" id="nPH-mO-I0k"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fUU-6F-o2Y"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2fV-lR-Cwj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="260.625" y="911.61971830985919"/>
         </scene>
         <!--Select Players-->
         <scene sceneID="T3i-Nz-7hM">
@@ -116,6 +151,9 @@
                                 <rect key="frame" x="51" y="393" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="SDq-me-0SD"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -286,6 +324,7 @@
                     </view>
                     <connections>
                         <outlet property="resultsLabel" destination="yET-zj-ZeX" id="oVz-6h-9V7"/>
+                        <outlet property="xPlayerTable" destination="ysH-Hs-u6d" id="6JT-aX-wZR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1OG-hZ-AIG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -294,9 +333,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LayoutTitle" width="300" height="300"/>
+        <image name="help.png" width="612" height="792"/>
+        <image name="home.png" width="612" height="792"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="iaj-CX-KaI"/>
+        <segue reference="h1T-be-Ndh"/>
+        <segue reference="hWB-qs-ewE"/>
     </inferredMetricsTieBreakers>
 </document>
